# rickbait

./: Cargo.toml
src/: main.rs
